--- a/tools/telegraf/arm64-workers.yaml
+++ b/tools/telegraf/arm64-workers.yaml
@@ -76,7 +76,7 @@ data:
       fieldinclude = ["load1", "load5", "load15"]
     [[inputs.temp]]
       metric_format = "v2"
-    #[inputs.intel_powerstat]]
+    #[[inputs.intel_powerstat]]
     #  package_metrics = ["current_power_consumption"]
     [[inputs.kubernetes]]
       interval = "60s"
@@ -146,7 +146,7 @@ spec:
                   fieldPath: spec.nodeName
 
         - name: telegraf
-          image: telegraf:1.29.5-alpine
+          image: telegraf:1.35.2-alpine
           securityContext:
             privileged: true
             capabilities:
@@ -156,8 +156,8 @@ spec:
           #  - "--user telegraf:$(stat -c '%g' /var/run/docker.sock)"
           resources:
             limits:
-              cpu: 100m
-              memory: 100Mi
+              cpu: 150m
+              memory: 150Mi
             requests:
               cpu: 25m
               memory: 25Mi
