--- a/tools/telegraf/master.yaml
+++ b/tools/telegraf/master.yaml
@@ -61,14 +61,12 @@ data:
    [[inputs.kube_inventory]]
      interval = "6000s"
      url = "https://$HOSTIP:6443"
-     bearer_token_string = "$TELEGRAF_TOKEN"
      resource_include = [ "pods", "deployments", "daemonsets", "services", "statefulsets" ]
      namespace = ""
      insecure_skip_verify = true
    [[inputs.kubernetes]]
      interval = "10s"
      url = "https://$HOSTIP:10250"
-     bearer_token_string = "$TELEGRAF_TOKEN"
      insecure_skip_verify = true
      namepass = ["kubernetes_pod_container", "kubernetes_pod_volume", "kubernetes_pod_network"]
    [[inputs.docker]]
@@ -102,7 +100,7 @@ spec:
       hostNetwork: true
       containers:
       - name: telegraf
-        image: telegraf:latest
+        image: telegraf:1.35.2-alpine
         securityContext:
           privileged: true
           capabilities:
