--- a/tools/telegraf/amd64-workers.yaml
+++ b/tools/telegraf/amd64-workers.yaml
@@ -179,11 +179,11 @@ spec:
               value: "/rootfs/proc"
             - name: "HOST_SYS"
               value: "/rootfs/sys"
-            - name: "TELEGRAF_TOKEN"
-              valueFrom:
-                secretKeyRef:
-                  name: telegraf-measurement-secret
-                  key: token
+            #- name: "TELEGRAF_TOKEN"
+            #  valueFrom:
+            #    secretKeyRef:
+            #      name: telegraf-measurement-secret
+            #      key: token
           volumeMounts:
             - name: sys
               mountPath: /rootfs/sys
