Stop using a separate secret as it is already created by service account.

--- a/tools/telegraf/serviceaccount.yaml
+++ b/tools/telegraf/serviceaccount.yaml
@@ -7,15 +7,15 @@ metadata:
     app.kubernetes.io/instance: telegraf
     app.kubernetes.io/name: telegraf
 
----
-apiVersion: v1
-kind: Secret
-metadata:
-  name: telegraf-measurement-secret
-  namespace: measurement
-  annotations:
-    kubernetes.io/service-account.name: telegraf
-type: kubernetes.io/service-account-token
+#---
+#apiVersion: v1
+#kind: Secret
+#metadata:
+#  name: telegraf-measurement-secret
+#  namespace: measurement
+#  annotations:
+#    kubernetes.io/service-account.name: telegraf
+#type: kubernetes.io/service-account-token
 
 ---
 # kubernetes_plugin: Give access to stats endpoints
@@ -38,7 +38,7 @@ rules:
     resources: [ "deployments" ]
     verbs: [ "get", "patch", "delete" ]
   - apiGroups: [""]
-    resources: ["nodes/proxy", "nodes/stats"]
+    resources: ["nodes/proxy", "nodes/metrics", "nodes/stats"]
     verbs: ["get", "list", "watch"]
   - apiGroups: [""]
     resources: ["persistentvolumes", "nodes"]
