--- a/tools/telegraf/master.yaml
+++ b/tools/telegraf/master.yaml
@@ -61,7 +61,7 @@ data:
    [[inputs.kube_inventory]]
      interval = "6000s"
      url = "https://$HOSTIP:6443"
-     resource_include = [ "pods", "deployments", "daemonsets", "services", "statefulsets" ]
+     resource_include = [ "pods", "deployments", "daemonsets", "statefulsets" ]
      namespace = ""
      insecure_skip_verify = true
    [[inputs.kubernetes]]
@@ -93,6 +93,7 @@ spec:
       labels:
         name: telegraf
     spec:
+      serviceAccountName: telegraf
       tolerations:
       - operator: "Exists"
       nodeSelector:
@@ -110,11 +111,11 @@ spec:
         #  - "--user telegraf:$(stat -c '%g' /var/run/docker.sock)"
         resources:
           limits:
-            cpu: 100m
-            memory: 100Mi
+            cpu: 150m
+            memory: 200Mi
           requests:
-            cpu: 25m
-            memory: 25Mi
+            cpu: 50m
+            memory: 50Mi
         env:
         - name: HOSTIP
           valueFrom:
@@ -128,11 +129,11 @@ spec:
           value: "/rootfs/proc"
         - name: "HOST_SYS"
           value: "/rootfs/sys"
-        - name: "TELEGRAF_TOKEN"
-          valueFrom:
-            secretKeyRef:
-              name: telegraf-measurement-secret
-              key: token
+        #- name: "TELEGRAF_TOKEN"
+        #  valueFrom:
+        #    secretKeyRef:
+        #      name: telegraf-measurement-secret
+        #      key: token
         volumeMounts:
         - name: sys
           mountPath: /rootfs/sys
