Add workload_id if present.

--- a/helm-configs/promtail-values.yaml
+++ b/helm-configs/promtail-values.yaml
@@ -529,6 +529,8 @@ config:
             regex: ^;*([^;]+)(;.*)?$
             action: replace
             target_label: instance
+          - source_labels: [__meta_kubernetes_pod_label_workload_id]
+            target_label: workload_id
           - source_labels:
               - __meta_kubernetes_pod_label_app_kubernetes_io_component
               - __meta_kubernetes_pod_label_component
